force-app/main/default/objects/Invoice_CSV_Data__c/Invoice_CSV_Data__c.object-meta.xml
<CustomObject>
    <description>Custom object for holding the supplier invoice data that comes from CSV file.</description>
    <label>Invoice CSV Data</label>
    <nameField>
        <displayFormat>ICD-{000000}</displayFormat>
        <label>Invoice CSV Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice CSV Datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>