force-app/main/default/objects/Invoice_CSV_Data__c/fields/Adder__c.field-meta.xml
<CustomField>
    <fullName>Adder__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Adder</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>