force-app/main/default/objects/Invoice_CSV_Data__c/fields/Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Type__c</fullName>
    <label>Calculation Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>