force-app/main/default/objects/Invoice_CSV_Data__c/fields/HasError__c.field-meta.xml
<CustomField>
    <fullName>HasError__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Error</label>
    <type>Checkbox</type>
</CustomField>