force-app/main/default/objects/Invoice_CSV_Data__c/fields/LDC_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>LDC_Account_Number__c</fullName>
    <label>LDC Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>