force-app/main/default/objects/Invoice_CSV_Data__c/fields/LDC_Actual_Usage__c.field-meta.xml
<CustomField>
    <fullName>LDC_Actual_Usage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>LDC Actual Usage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>