force-app/main/default/objects/Invoice_CSV_Data__c/fields/LDC_Status__c.field-meta.xml
<CustomField>
    <fullName>LDC_Status__c</fullName>
    <label>LDC Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>