force-app/main/default/objects/Invoice_CSV_Data__c/fields/Payment_Month__c.field-meta.xml
<CustomField>
    <fullName>Payment_Month__c</fullName>
    <label>Payment Month</label>
    <type>Date</type>
</CustomField>