force-app/main/default/objects/Invoice_CSV_Data__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when record id processed.</description>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>