force-app/main/default/objects/Invoice_CSV_Data__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revenue</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoice CSV Datas</relationshipLabel>
    <relationshipName>Invoice_CSV_Datas</relationshipName>
    <type>Lookup</type>
</CustomField>