force-app/main/default/objects/Invoice_CSV_Data__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <label>Supplier Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>